# wgpu-sandbox

./: Cargo.toml  README.md  index.html  leptos-example-b925f846d096a7eb.js  leptos-example-b925f846d096a7eb_bg.wasm  tailwind-18785d87b57976b2.css
.github/workflows/: pages.yml
src/: app.rs  display.rs  gpu.rs  lib.rs  main.rs
src/examples/: mod.rs
src/examples/mandelbrot/: app.rs  mod.rs  shader.wgsl
src/examples/triangle/: app.rs  mod.rs  shader.wgsl
src/gpu/: app.rs  context.rs  helpers.rs  instance.rs  mod.rs
styles/: index.css
