[package]
name = "leptos-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = [
    'Document',
    'Element',
    'Window',
    'HtmlCanvasElement',
] }
wgpu = { version = "0.19.1", default-features = false, features = [
    "webgl",
    "wgsl",
] }
winit = "0.29.10"
glam = "0.25.0"
encase = { version = "0.7.0", features = ["glam"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
